src/main/java/lexical/test/failing/15.ru
/? ERROR: LEXICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 1 | 2 | Cadena mal formada:  |
"자모"